# fast_websocket_client

./: Cargo.toml  LICENSE  README.md  compose.yml
.github/workflows/: tests.yml
examples/: async_callback_client.rs  base_client.rs  builders_channels_handler_functions.rs  wss_client.rs
src/: base_client.rs  client.rs  fragment.rs  handshake.rs  lib.rs  proxy.rs  recv.rs  tls_connector.rs  websocket.rs
tests/: proxy_integration.rs
