[package]
name = "fast_websocket_client"
version = "0.4.1"
edition = "2024"
categories = [
    "asynchronous",
    "concurrency",
    "network-programming",
    "web-programming",
    "web-programming::websocket",
]
keywords = ["async", "client", "tokio", "websocket", "wss"]
license = "Apache-2.0"
authors = ["Hyoungjun Son"]
description = "Tokio-native WebSocket client for Rust. High-throughput, low-latency, callback-driven, proxy-ready."
repository = "https://github.com/Osteoporosis/fast_websocket_client/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "wss_client"
path = "examples/async_callback_client.rs"

[dependencies]
base64 = { version = "0.22.1", optional = true }
fastwebsockets = { version = "0.10.0", features = ["simd", "upgrade"] }
http-body-util = "0.1.3"
hyper = "1.7.0"
hyper-util = "0.1.17"
rustls-pki-types = "1.12.0"
serde = "1.0.228"
serde_json = "1.0.145"
simdutf8 = { version = "0.1.5", features = ["aarch64_neon"] }
thiserror = { version = "2.0.17", optional = true }
tokio = { version = "1.48.0", default-features = false, features = [
    "net",
    "parking_lot",
    "rt",
] }
tokio-rustls = { version = "0.26.4", default-features = false, features = [
    "logging",
    "tls12",
] }
tokio-socks = { version = "0.5.2", optional = true }
url = "2.5.7"
webpki-roots = "1.0.3"

[features]
default = ["callback_client", "proxy", "aws_lc_rs"]
aws_lc_rs = ["tokio-rustls/aws_lc_rs"]
ring = ["tokio-rustls/ring"]
callback_client = ["proxy", "thiserror", "tokio/macros"]
proxy = ["base64", "tokio-socks"]

[dev-dependencies]
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", default-features = false, features = [
    "macros",
    "parking_lot",
    "rt-multi-thread",
    "time",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
